0023596: Extending XCAFPrs_AISObject to enable customization of default color